--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Resume Website Template Free Download</title>
+        <title>Noren Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Resume Website Template Free Download" name="keywords">
         <meta content="Resume Website Template Free Download" name="description">
@@ -61,9 +61,9 @@
                     </nav>
                 </div>
                 <div class="sidebar-footer">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://twitter.com/nor_2k"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/norend"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.linkedin.com/in/norendas/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="content">
@@ -71,9 +71,9 @@
                 <div class="header" id="header">
                     <div class="content-inner">
                         <p>I'm</p>
-                        <h1>Michael Miller</h1>
+                        <h1>Noren Das</h1>
                         <h2></h2>
-                        <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Developer, Graphic Designer</div>
+                        <div class="typed-text">Quantum Marketer, Worldwide Business Developer, Winning Strategist, Business Developer, Digital Marketer, Data Science Enthusiast, Web Developer, Front End Developer, Apps Developer, Graphic Designer</div>
                     </div>
                 </div>
                 <!-- Header End -->
@@ -99,7 +99,7 @@
                             </div>
                             <div class="col-md-6 col-lg-7">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat. Proin libero ligula, gravida at porttitor eget.
+                                    Proactive decision maker, targeting challenging assignments at senior managerial level with top of the line companies, organizations in Engineering EPC / manufacturing sector across marketing & international business development.
                                 </p>
                                 <a class="btn" href="#">Hire Me</a>
                             </div>
@@ -151,30 +151,30 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
+                                    <span>01-May-2005 <i>to</i> 31-May-2007</span>
                                     <h3>Master Degree</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p> PGDM in Marketing and IT from ICFAI, Hyderabad.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
+                                    <span>01-May-1999 <i>to</i> 31-Apr-2003</span>
                                     <h3>Bachelor Degree</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>B. Tech in Electrical Engineering. Division I. form Kurukshetra University, Haryana, India.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
-                                    <h3>Associate Degree</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <span>01-Apr-1998 <i>to</i> 31-Mar-1999</span>
+                                    <h3>Sr. Secondary School</h3>
+                                    <p>Complete schooling from Mira Model School, Delhi NCR with First Division.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
+                                    <span>01-Apr-1996 <i>to</i> 31-Mar-1997</span>
                                     <h3>High School</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>Complete schooling from Mira Model School, Delhi NCR with First Division.</p>
                                 </div>
                             </div>
                         </div>
